Added tutorial for recoil

--- a/public/choosing-tutorial-page-csgo-recoil.html
+++ b/public/choosing-tutorial-page-csgo-recoil.html
@@ -71,7 +71,7 @@
       <!-- Put your tutorials here -->
       <!-- Each article is one tutorial -->
       <!-- put the link to the tutorialpage here!! -->
-      <a href="tutorial-csgo-1.html">
+      <a href="tutorial-csgo-recoil-ak.html">
         <article class="flex tutorial">
           <!-- Change the image for each tutorial here!! -->
           <img src="images/tutorial-csgo-8.jpg" alt="">
