--- a/public/tutorial-csgo-recoil-ak.html
+++ b/public/tutorial-csgo-recoil-ak.html
@@ -73,23 +73,26 @@
                 </div>
                 <h2>
                     <!-- Name of tutorial here!! -->
-                    How to 
+                    How to control AK-47 Recoil
                 </h2>
             </div>
             <!-- put the tutorial in this div -->
             <div class="flex">
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea molestias illo corporis mollitia reiciendis quas, 
-                    error laudantium doloremque ipsam totam quibusdam distinctio, culpa inventore neque, a ab explicabo suscipit 
-                    nihil magnam harum recusandae? Repudiandae placeat assumenda quae, magni cumque sed, odio debitis quo, labore
-                    harum dolor qui. Perspiciatis nulla tempore numquam quidem natus, velit quas cumque ex quisquam maxime repellendus
-                    eum autem officiis ea aliquid blanditiis repellat, deserunt veritatis quae earum odit cum totam unde quis! Quibusdam 
-                    nisi quis nesciunt nostrum distinctio sequi rem assumenda tempora repellat nobis iusto aut quas, minus ullam adipisci 
-                    eveniet aliquam maxime facilis pariatur possimus? ipsum dolor sit amet consectetur, adipisicing elit. Tempora ipsa fugit, 
-                    nisi debitis ipsum laboriosam veniam perferendis, nemo ducimus voluptates, id laborum voluptate suscipit ab! Quis, 
-                    perspiciatis. Nobis, officia exercitationem.
+                    As you can see from the video, the AK-47 doesn't shoot at one point straight all the time. To shoot properly, you need to control where it shoots.
+                    In the video, we can observe that the shooting goes up, then to the left, then to the right, and then again to the left, repeating the cycle.
+                    So, in order to control the recoil, you need to practice, just like in the video. To practice, go to any map that has straight walls and input the
+                    following commands: "mp_roundtime_defuse 60" (this will make the round last for 60 minutes), "mp_buy_anywhere 1" (this will allow you to buy anywhere on the map),
+                    "mp_buytime 6000" (so that you have an unlimited amount of time), "sv_cheats 1" (to be able to use any cheats you want to), "endround" (to end the small round),
+                    and "mp_afterroundmoney 16000" (to have the full amount of money to be able to buy weapons). After you have entered these commands, you can start your training.
+                    First of all, try to understand how the recoil moves when you shoot without controlling it. Once you've done that, try to practice just like in the
+                    video: shoot and move the crosshair to the bottom and left. After you've tried to control these two movements to be able to shoot in one exact point right
+                    from the beginning, move on to controlling it when it goes to the right and left again. When you've done this, congratulations! You've learned how 
+                    to control recoil for the AK-47. Practice it even more, and then you will be able to control it just like a professional CS gamer. 
+                    Please note that cheating and using external commands to modify the game experience is not supported in official gameplay and can be against the
+                    terms of service of the game. It is recommended to practice within the confines of the game's rules and mechanics.
                 </p> 
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/DDCTP9PKmC8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>          
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/t2a8J_VkX1w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>         
             </div>
             <!-- navigation under the tutorial -->
             <nav class="flex">
