--- a/public/Tutorial-fifa-3.html
+++ b/public/Tutorial-fifa-3.html
@@ -68,7 +68,7 @@
         <section class="tutorial dark-box">
             <div class="flex">
                 <div class="flex ">
-                    <img src="images/gta1.png" alt="">
+                    <img src="images/fifa.jpg" alt="">
                     <h6> - Praise</h6>
                 </div>
                 <h2>
@@ -109,9 +109,9 @@
                   <li><a href="choosing-tutorial-page-fifa-all.html">ALL</a></li>
                   <li><a href="choosing-tutorial-page-fifa-section3.html">Tactics And Strategies</a></li>
                   <li><a href="choosing-tutorial-page-fifa-section1.html"> Guides</a></li>
-                  <li><a href="choosing-tutorial-page-fifa-section2.html">Gameplay </a></li>
+                  <li><a href="choosing-tutorial-page-fifa-section2.html">In-game screenshots</a></li>
                 </ul>
-                <a href="Tutorial-fifa-3.html">Next</a>
+                <a href="Guide-fifa-1.html">Next</a>
               </nav>
 
         </section>
