--- a/public/choosing-tutorial-page-fifa-section1.html
+++ b/public/choosing-tutorial-page-fifa-section1.html
@@ -63,7 +63,7 @@
           <li><a href="choosing-tutorial-page-fifa-all.html">ALL</a></li>
           <li><a href="choosing-tutorial-page-fifa-section3.html">Tactics And Strategies</a></li>
           <li class="selected"><a href="choosing-tutorial-page-fifa-section1.html">Guides</a></li>
-          <li><a href="choosing-tutorial-page-fifa-section2.html">Gameplay </a></li>
+          <li><a href="choosing-tutorial-page-fifa-section2.html">In-game screenshots</a></li>
           
         </ul>
       </nav>
