--- a/public/Guide-fifa-2.html
+++ b/public/Guide-fifa-2.html
@@ -68,7 +68,7 @@
         <section class="tutorial dark-box">
             <div class="flex">
                 <div class="flex ">
-                    <img src="images/gta1.png" alt="">
+                    <img src="images/fifa.jpg" alt="">
                     <h6> - Praise</h6>
                 </div>
                 <h2>
@@ -163,7 +163,7 @@
                   <li><a href="choosing-tutorial-page-fifa-all.html">ALL</a></li>
                   <li><a href="choosing-tutorial-page-fifa-section3.html">Tactics And Strategies</a></li> 
                   <li><a href="choosing-tutorial-page-fifa-section1.html"> Guides</a></li>
-                  <li><a href="choosing-tutorial-page-fifa-section2.html">Gameplay </a></li>
+                  <li><a href="choosing-tutorial-page-fifa-section2.html">In-game screenshots</a></li>
                   
                 </ul>
                 <a href="Guide-fifa-3.html">Next</a>
