Lots of changes:
-Added pictures for the gta tutorial page
characters, thumbnail for tutorials
- Added new css :
more grid on tutorials in character page
-added pages for charcter,cheats,easteregg,collectibles

--- a/public/choosing-tutorial-page-csgo-all.html
+++ b/public/choosing-tutorial-page-csgo-all.html
@@ -24,9 +24,8 @@
       <a href="index.html">
         <img id="headerlogo" href="index.html" src="images/gta1.png">
       </a>
-      <!-- <button class="buttonlogo">
-        <img id="headerlogo1" src="images/gta2.png">
-      </button> -->
+      
+      
     </header>
 
     <!--Here I create the sidebar with links to different pages on the website-->
@@ -96,7 +95,7 @@
             <h2 class="margin-0">Name of tutorial</h2>
             <hr>
             <!-- Change you name here!! -->
-            <h6 class="margin-0">By Thomas Zegers</h6>
+            <h6 class="margin-0">By Ivan Setiawan</h6>
             <!-- Write a summary of the tutorial here!! -->
             <p>
               Introduction to tutorial
@@ -114,7 +113,7 @@
             <h2 class="margin-0">Name of tutorial</h2>
             <hr>
             <!-- Change you name here!! -->
-            <h6 class="margin-0">By Thomas Zegers</h6>
+            <h6 class="margin-0">By Ivan Setiawan</h6>
             <!-- Write a summary of the tutorial here!! -->
             <p>
               Introduction to tutorial
