--- a/public/choosing-tutorial-page-gta-easteregg.html
+++ b/public/choosing-tutorial-page-gta-easteregg.html
@@ -24,9 +24,6 @@
       <a href="index.html">
         <img id="headerlogo" href="index.html" src="images/gta1.png">
       </a>
-      <!-- <button class="buttonlogo">
-        <img id="headerlogo1" src="images/gta2.png">
-      </button> -->
     </header>
 
     <!--Here I create the sidebar with links to different pages on the website-->
@@ -61,14 +58,49 @@
         <ul class="flex">
           <!-- Change the sections for your tutorial here!! -->
           <li><a href="choosing-tutorial-page-gta-all.html">ALL</a></li>
-          <li><a href="choosing-tutorial-page-gta-section1.html">section1</a></li>
-          <li><a href="choosing-tutorial-page-gta-section2.html">section2</a></li>
-          <li class="selected"><a href="choosing-tutorial-page-gta-section3.html">section3</a></li>
+          <li><a href="choosing-tutorial-page-gta-collectibles.html">Collectibles</a></li>
+          <li class="selected"><a href="choosing-tutorial-page-gta-easteregg.html">Easter eggs</a></li>
+          <li><a href="choosing-tutorial-page-gta-cheats.html">Cheats</a></li>
+          <li><a href="choosing-tutorial-page-gta-characters.html">Characters</a></li>
         </ul>
       </nav>
 
-            <!-- Put your tutorials here -->
+      <!-- Put your tutorials here -->
+      <a href="tutorial-gta-ghost.html">
+        <article class="flex tutorial ">
+          <!-- Change the image for each tutorial here!! -->
+          <img src="images/tutorial-gta-ghost.png" alt="https://staticg.sportskeeda.com/editor/2022/07/2a9f9-16570215827131-1920.jpg">
+          <div>
+            <!-- Change the name of tutorial here!! -->
+            <h2 class="margin-0">Ghost Of Mount Gordo</h2>
+            <hr>
+            <!-- Change you name here!! -->
+            <h6 class="margin-0">By Ivan Setiawan</h6>
+            <!-- Write a summary of the tutorial here!! -->
+            <p>
+              
+            </p>
+          </div>
+        </article>
+      </a>
 
+      <a href="tutorial-gta-ufo.html">
+        <article class="flex tutorial ">
+          <!-- Change the image for each tutorial here!! -->
+          <img src="images/tutorial-gta-ufos.png" alt="https://staticg.sportskeeda.com/editor/2021/10/65f82-16342966194397-1920.jpg">
+          <div>
+            <!-- Change the name of tutorial here!! -->
+            <h2 class="margin-0">All UFO</h2>
+            <hr>
+            <!-- Change you name here!! -->
+            <h6 class="margin-0">By Ivan Setiawan</h6>
+            <!-- Write a summary of the tutorial here!! -->
+            <p>
+              
+            </p>
+          </div>
+        </article>
+      </a>
 
     </main>
   </body>
