--- a/public/sitemap.html
+++ b/public/sitemap.html
@@ -26,11 +26,445 @@
 
     <main>
       <div id="sitemapheader">
-        <h2>SITEMAP</h2>
+        <h2 id="sitemapheadertext">SITEMAP</h2>
       </div>
 
-      <section class="grid">
-          
+      <section class="gridsitemap">
+          <article id="homepagesitemap">
+            <h2>Homepage</h2>
+            <br>
+            <ul>
+              <li><a href="popular.html">Most Popular</a></li>
+              <li><a href="fps.html">FPS</a></li>
+              <li><a href="rpg.html">RPG</a></li>
+              <li><a href="sport.html">Sport</a></li>
+              <li><a href="platformer.html">Platformer</a></li>
+              <li><a href="horror.html">Horror</a></li>
+              <li><a href="racing.html">Racing</a></li>
+              <li><a href="adventure.html">Adventure</a></li>
+              <li><a href="fighting.html">Fighting</a></li>
+              <li><a href="puzzle.html">Puzzle</a></li>
+              <li><a href="strategy.html">Strategy</a></li>
+              <li><a href="action.html">Action</a></li>
+              <li><a href="about.html">About Us</a></li>
+              <li><a href="sitemap.html">Sitemap</a></li>
+            </ul>
+          </article>
+
+          <article id="popularsitemap">
+            <h2>Most Popular</h2>
+            <br>
+            <ul>
+              <li>Grand Theft Auto 5</li>
+              <li>Counter Strike Global Offensive</li>
+              <li>Hollow Knight</li>
+              <li>FIFA 23</li>
+              <li>Minecraft</li>
+              <li>Overwatch</li>
+              <li>About us</li>
+              <li>Homepage</li>
+              <li>Most Popular</li>
+              <li>FPS</li>
+              <li>RPG</li>
+              <li>Sport</li>
+              <li>Platformer</li>
+              <li>Horror</li>
+              <li>Racing</li>
+              <li>Adventure</li>
+              <li>Fighting</li>
+              <li>Puzzle</li>
+              <li>Strategy</li>
+              <li>Action</li>
+            </ul>
+          </article>
+
+          <article id="fpssitemap">
+            <h2>FPS</h2>
+            <br>
+            <ul>
+              <li>Counter Strike Global Offensive</li>
+              <li>Overwatch</li>
+              <li>About us </li>
+              <li>Homepage</li>
+              <li>Most Popular</li>
+              <li>FPS</li>
+              <li>RPG</li>
+              <li>Sport</li>
+              <li>Platformer</li>
+              <li>Horror</li>
+              <li>Racing</li>
+              <li>Adventure</li>
+              <li>Fighting</li>
+              <li>Puzzle</li>
+              <li>Strategy</li>
+              <li>Action</li>
+            </ul>
+          </article>
+
+          <article id="rpgsitemap">
+            <h2>RPG</h2>
+            <br>
+            <ul>
+              <li>Grand Theft Auto 5</li>
+              <li>About us </li>
+              <li>Homepage</li>
+              <li>Most Popular</li>
+              <li>FPS</li>
+              <li>RPG</li>
+              <li>Sport</li>
+              <li>Platformer</li>
+              <li>Horror</li>
+              <li>Racing</li>
+              <li>Adventure</li>
+              <li>Fighting</li>
+              <li>Puzzle</li>
+              <li>Strategy</li>
+              <li>Action</li>
+            </ul>
+          </article>
+
+          <article id="sportsitemap">
+            <h2>Sport</h2>
+            <br>
+            <ul>
+              <li>FIFA23</li>
+              <li>About us </li>
+              <li>Homepage</li>
+              <li>Most Popular</li>
+              <li>FPS</li>
+              <li>RPG</li>
+              <li>Sport</li>
+              <li>Platformer</li>
+              <li>Horror</li>
+              <li>Racing</li>
+              <li>Adventure</li>
+              <li>Fighting</li>
+              <li>Puzzle</li>
+              <li>Strategy</li>
+              <li>Action</li>
+            </ul>
+          </article>
+
+          <article id="platformersitemap">
+            <h2>Platformer</h2>
+            <br>
+            <ul>
+              <li>Hollow Knight</li>
+              <li>About us </li>
+              <li>Homepage</li>
+              <li>Most Popular </li>
+              <li>FPS</li>
+              <li>RPG</li>
+              <li>Sport</li>
+              <li>Platformer</li>
+              <li>Horror</li>
+              <li>Racing</li>
+              <li>Adventure</li>
+              <li>Fighting</li>
+              <li>Puzzle</li>
+              <li>Strategy</li>
+              <li>Action</li>
+            </ul>
+          </article>
+
+          <article id="horrorsitemap">
+            <h2>Horror</h2>
+            <br>
+            <ul>
+              <li>About us </li>
+              <li>Homepage</li>
+              <li>Most Popular </li>
+              <li>FPS</li>
+              <li>RPG</li>
+              <li>Sport</li>
+              <li>Platformer</li>
+              <li>Horror</li>
+              <li>Racing</li>
+              <li>Adventure</li>
+              <li>Fighting</li>
+              <li>Puzzle</li>
+              <li>Strategy</li>
+              <li>Action</li>
+            </ul>
+          </article>
+
+          <article id="racingsitemap">
+            <h2>Racing</h2>
+            <br>
+            <ul>
+              <li>About us</li> 
+              <li>Homepage</li>
+              <li>Most Popular </li>
+              <li>FPS</li>
+              <li>RPG</li>
+              <li>Sport</li>
+              <li>Platformer</li>
+              <li>Horror</li>
+              <li>Racing</li>
+              <li>Adventure</li>
+              <li>Fighting</li>
+              <li>Puzzle</li>
+              <li>Strategy</li>
+              <li>Action</li>
+            </ul>
+          </article>
+
+          <article id="adventuresitemap">
+            <h2>Adventure</h2>
+            <br>
+            <ul>
+              <li>Minecraft</li>
+              <li>About us </li>
+              <li>Homepage</li>
+              <li>Most Popular </li>
+              <li>FPS</li>
+              <li>RPG</li>
+              <li>Sport</li>
+              <li>Platformer</li>
+              <li>Horror</li>
+              <li>Racing</li>
+              <li>Adventure</li>
+              <li>Fighting</li>
+              <li>Puzzle</li>
+              <li>Strategy</li>
+              <li>Action</li>
+            </ul>
+          </article>
+
+          <article id="fightingsitemap">
+            <h2>Fighting</h2>
+            <br>
+            <ul>
+              <li>About us </li>
+              <li>Homepage</li>
+              <li>Most Popular</li>
+              <li>FPS</li>
+              <li>RPG</li>
+              <li>Sport</li>
+              <li>Platformer</li>
+              <li>Horror</li>
+              <li>Racing</li>
+              <li>Adventure</li>
+              <li>Fighting</li>
+              <li>Puzzle</li>
+              <li>Strategy</li>
+              <li>Action</li>
+            </ul>
+          </article>
+
+          <article id="puzzlesitemap">
+            <h2>Puzzle</h2>
+            <br>
+            <ul>
+              <li>About us </li>
+              <li>Homepage</li>
+              <li>Most Popular</li>
+              <li>FPS</li>
+              <li>RPG</li>
+              <li>Sport</li>
+              <li>Platformer</li>
+              <li>Horror</li>
+              <li>Racing</li>
+              <li>Adventure</li>
+              <li>Fighting</li>
+              <li>Puzzle</li>
+              <li>Strategy</li>
+              <li>Action</li>
+            </ul>
+          </article>
+
+          <article id="strategysitemap">
+            <h2>Strategy</h2>
+            <br>
+            <ul>
+              <li>About us </li>
+              <li>Homepage</li>
+              <li>Most Popular</li>
+              <li>FPS</li>
+              <li>RPG</li>
+              <li>Sport</li>
+              <li>Platformer</li>
+              <li>Horror</li>
+              <li>Racing</li>
+              <li>Adventure</li>
+              <li>Fighting</li>
+              <li>Puzzle</li>
+              <li>Strategy</li>
+              <li>Action</li>
+            </ul>
+          </article>
+
+          <article id="actionsitemap">
+            <h2>Action</h2>
+            <br>
+            <ul>
+              <li>About us </li>
+              <li>Homepage</li>
+              <li>Most Popular</li>
+              <li>FPS</li>
+              <li>RPG</li>
+              <li>Sport</li>
+              <li>Platformer</li>
+              <li>Horror</li>
+              <li>Racing</li>
+              <li>Adventure</li>
+              <li>Fighting</li>
+              <li>Puzzle</li>
+              <li>Strategy</li>
+              <li>Action</li>
+            </ul>
+          </article>
+
+          <article id="aboutsitemap">
+            <h2>About Us</h2>
+            <br>
+            <ul>
+              <li>Homepage</li>
+            </ul>
+          </article>
+
+          <article id="gtasitemap">
+            <h2>Grand Theft Auto V</h2>
+            <br>
+            <ul>
+              <li>About us </li>
+              <li>Homepage</li>
+              <li>Most Popular</li>
+              <li>FPS</li>
+              <li>RPG</li>
+              <li>Sport</li>
+              <li>Platformer</li>
+              <li>Horror</li>
+              <li>Racing</li>
+              <li>Adventure</li>
+              <li>Fighting</li>
+              <li>Puzzle</li>
+              <li>Strategy</li>
+              <li>Action</li>
+            </ul>
+          </article>
+
+          <article id="csgositemap">
+            <h2>Counter Strike Global Offensive</h2>
+            <br>
+            <ul>
+              <li>About us </li>
+              <li>Homepage</li>
+              <li>Most Popular</li>
+              <li>FPS</li>
+              <li>RPG</li>
+              <li>Sport</li>
+              <li>Platformer</li>
+              <li>Horror</li>
+              <li>Racing</li>
+              <li>Adventure</li>
+              <li>Fighting</li>
+              <li>Puzzle</li>
+              <li>Strategy</li>
+              <li>Action</li>
+            </ul>
+          </article>
+
+          <article id="hollowsitemap">
+            <h2>Hollow Knight</h2>
+            <br>
+            <ul>
+              <li>About us </li>
+              <li>Homepage</li>
+              <li>Most Popular</li>
+              <li>FPS</li>
+              <li>RPG</li>
+              <li>Sport</li>
+              <li>Platformer</li>
+              <li>Horror</li>
+              <li>Racing</li>
+              <li>Adventure</li>
+              <li>Fighting</li>
+              <li>Puzzle</li>
+              <li>Strategy</li>
+              <li>Action</li>
+            </ul>
+          </article>
+
+          <article id="fifasitemap">
+            <h2>FIFA23</h2>
+            <br>
+            <ul>
+              <li>About us </li>
+              <li>Homepage</li>
+              <li>Most Popular</li>
+              <li>FPS</li>
+              <li>RPG</li>
+              <li>Sport</li>
+              <li>Platformer</li>
+              <li>Horror</li>
+              <li>Racing</li>
+              <li>Adventure</li>
+              <li>Fighting</li>
+              <li>Puzzle</li>
+              <li>Strategy</li>
+              <li>Action</li>
+            </ul>
+          </article>
+
+          <article id="minecraftsitemap">
+            <h2>Minecraft</h2>
+            <br>
+            <ul>
+              <li>About us </li>
+              <li>Homepage</li>
+              <li>Most Popular</li>
+              <li>FPS</li>
+              <li>RPG</li>
+              <li>Sport</li>
+              <li>Platformer</li>
+              <li>Horror</li>
+              <li>Racing</li>
+              <li>Adventure</li>
+              <li>Fighting</li>
+              <li>Puzzle</li>
+              <li>Strategy</li>
+              <li>Action</li>
+            </ul>
+          </article>
+
+          <article id="overwatchsitemap">
+            <h2>Overwatch</h2>
+            <br>
+            <ul>
+              <li>About us </li>
+              <li>Homepage</li>
+              <li>Most Popular</li>
+              <li>FPS</li>
+              <li>RPG</li>
+              <li>Sport</li>
+              <li>Platformer</li>
+              <li>Horror</li>
+              <li>Racing</li>
+              <li>Adventure</li>
+              <li>Fighting</li>
+              <li>Puzzle</li>
+              <li>Strategy</li>
+              <li>Action</li>
+            </ul>
+          </article>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
       </section>
 
     </main>
