--- a/public/choosing-tutorial-page-gta-collectibles.html
+++ b/public/choosing-tutorial-page-gta-collectibles.html
@@ -61,14 +61,51 @@
         <ul class="flex">
           <!-- Change the sections for your tutorial here!! -->
           <li><a href="choosing-tutorial-page-gta-all.html">ALL</a></li>
-          <li class="selected"><a href="choosing-tutorial-page-gta-section1.html">section1</a></li>
-          <li><a href="choosing-tutorial-page-gta-section2.html">section2</a></li>
-          <li><a href="choosing-tutorial-page-gta-section3.html">section3</a></li>
+          <li class="selected"><a href="choosing-tutorial-page-gta-collectibles.html">Collectibles</a></li>
+          <li><a href="choosing-tutorial-page-gta-easteregg.html">Easter eggs</a></li>
+          <li><a href="choosing-tutorial-page-gta-cheats.html">Cheats</a></li>
+          <li><a href="choosing-tutorial-page-gta-characters.html">Characters</a></li>
         </ul>
       </nav>
 
       <!-- Put your tutorials here -->
+      <a href="tutorial-gta-spaceshipparts.html">
+        <article class="flex tutorial">
+          <!-- Change the image for each tutorial here!! -->
+          <img src="images/tutorial-gta-space.png" alt="https://assetsio.reedpopcdn.com/gta-5-spaceship-parts-locations-where-to-find-8026-1635239907217.jpg?width=690&quality=75&format=jpg&dpr=2&auto=webp">
+          <div>
+            <!-- Change the name of tutorial here!! -->
+            <h2 class="margin-0">Spaceship Parts</h2>
+            <hr>
+            <!-- Change you name here!! -->
+            <h6 class="margin-0">By Ivan Setiawan</h6>
+            <!-- Write a summary of the tutorial here!! -->
+            <p>
+              A side quest to collect spaceship parts, Once all the parts are collected you will be able to get a unique vehicle
+            </p>
+          </div>
+        </article>
+      </a>
+
+      <a href="tutorial-gta-letterscraps.html">
+        <article class="flex tutorial">
+          <!-- Change the image for each tutorial here!! -->
+          <img src="images/tutorial-gta-letter.png" alt="https://i.ytimg.com/vi/BkfDn9JNVb4/hqdefault.jpg">
+          <div>
+            <!-- Change the name of tutorial here!! -->
+            <h2 class="margin-0">Letter Scraps</h2>
+            <hr>
+            <!-- Change you name here!! -->
+            <h6 class="margin-0">By Ivan Setiawan</h6>
+            <!-- Write a summary of the tutorial here!! -->
+            <p>
+              A side quest to collect letter scraps, this mission is connected with the easter egg ghost of mount gordo
+            </p>
+          </div>
+        </article>
+      </a>
 
     </main>
   </body>
 </html>
+
