--- a/public/tutorial-gta-omega.html
+++ b/public/tutorial-gta-omega.html
@@ -69,36 +69,92 @@
             <div class="flex">
                 <div class="flex ">
                     <img src="images/gta1.png" alt="">
-                    <h6> - Thomas</h6>
+                    <h6> - Ivan</h6>
                 </div>
                 <h2>
                     <!-- Name of tutorial here!! -->
-                    How to move
-                </h2>
+                    Omega
             </div>
             <!-- put the tutorial in this div -->
-            <div class="flex">
+            <div class="gridbio">
+              <article class="biotext">
+                <h2>Personal Information</h2>
+                <div class="biotable">
+                  <table>
+                    <tr>
+                      <th>Name</th>
+                      <td>Omega</td>
+                    </tr>
+
+                    <tr>
+                      <th>Voice Actor</th>
+                      <td>Alex Bilu</td>
+                    </tr>
+
+                    <tr>
+                      <th>Gender</th>
+                      <td>Male</td>
+                    </tr>
+
+                    <tr>
+                      <th>Vehicle</th>
+                      <td>Space Docker</td>
+                    </tr>
+
+                    <tr>
+                      <th>Status</th>
+                      <td>Alive</td>
+                    </tr>
+
+                    <tr>
+                      <th>Nationality</th>
+                      <td>American</td>
+                    </tr>
+
+                    <tr>
+                      <th>Home</th>
+                      <td>Senora Desert Trailer Park, Blaine County, San Andreas</td>
+                    </tr>
+
+                    <tr>
+                      <th>Phone Number</th>
+                      <td>3465550162</td>
+                    </tr>
+                  </table>
+                </div>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea molestias illo corporis mollitia reiciendis quas, 
-                    error laudantium doloremque ipsam totam quibusdam distinctio, culpa inventore neque, a ab explicabo suscipit 
-                    nihil magnam harum recusandae? Repudiandae placeat assumenda quae, magni cumque sed, odio debitis quo, labore
-                    harum dolor qui. Perspiciatis nulla tempore numquam quidem natus, velit quas cumque ex quisquam maxime repellendus
-                    eum autem officiis ea aliquid blanditiis repellat, deserunt veritatis quae earum odit cum totam unde quis! Quibusdam 
-                    nisi quis nesciunt nostrum distinctio sequi rem assumenda tempora repellat nobis iusto aut quas, minus ullam adipisci 
-                    eveniet aliquam maxime facilis pariatur possimus? ipsum dolor sit amet consectetur, adipisicing elit. Tempora ipsa fugit, 
-                    nisi debitis ipsum laboriosam veniam perferendis, nemo ducimus voluptates, id laborum voluptate suscipit ab! Quis, 
-                    perspiciatis. Nobis, officia exercitationem.
+                  
                 </p>
-                <iframe src="https://www.youtube.com/embed/9nvKTm5A8Gs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>            
+              </article>
+
+              <article class="biobackground">
+                <h2>Events of GTA 5</h2>
+                <br>
+                <br>
+                <p>
+                  In the quest Far Out, Omega can be seen in the Grand Senora Desert. When Franklin approaches him, he orders Franklin to stop where he is, calls him a carbon-based living form, and points an odd object at him. Franklin is given an explanation of how a spaceship crashed and its components are all around San Andreas. Franklin asks him if he's crazy before leaving. He requests Franklin to locate the parts once more as he is leaving.
+                </p>
+
+              </article>
+
+              <article class="biosource">
+                <h2>Sources</h2>
+                <a href="https://wiki.sportskeeda.com/gta/omega">https://wiki.sportskeeda.com/gta/omega</a>
+              </article>
+
+              <article class="franklinpic">
+                <img class="gtabiopic" src="images/tutorial-gta-omegabio.png" alt="https://static.wikia.nocookie.net/gtawiki/images/9/97/Omega_GTAVpc_Portrait.png/revision/latest?cb=20150804090033">
+              </article>  
             </div>
             <!-- navigation under the tutorial -->
             <nav class="flex">
                 <ul class="flex">
                   <!-- Change the sections for your tutorial here!! -->
                   <li><a href="choosing-tutorial-page-gta-all.html">ALL</a></li>
-                  <li><a href="choosing-tutorial-page-gta-section1.html">section1</a></li>
-                  <li><a href="choosing-tutorial-page-gta-section2.html">section2</a></li>
-                  <li><a href="choosing-tutorial-page-gta-section3.html">section3</a></li>
+                  <li><a href="choosing-tutorial-page-gta-collectibles.html">Collectibles</a></li>
+                  <li><a href="choosing-tutorial-page-gta-easteregg.html">Easter eggs</a></li>
+                  <li><a href="choosing-tutorial-page-gta-cheats.html">Cheats</a></li>
+                  <li><a href="choosing-tutorial-page-gta-characters.html">Characters</a></li>
                 </ul>
                 <a href="choosing-tutorial-page-gta-section3.html">Next</a>
               </nav>
