--- a/public/about.html
+++ b/public/about.html
@@ -31,7 +31,10 @@
                     </article>                
                     <article class="image-item">
                             <img src="images/praise.jpg" alt="praise">
-                            <p>My name is Praise and im a member of the group</p>
+                            <p>
+                                My name is Praise and im a member of Game Tutorial Alliance 
+
+                            </p>
                             <article class="social-links">
                                 <a href="https://www.twitter.com"><img src="images/twitter.png"></a>
                                 <a href="https://www.instagram.com"><img src="images/instagram.png"></a>
@@ -39,9 +42,10 @@
                     </article>
                     <article class="image-item">
                         <img src="images/danya.jpg" alt="danya">
-                        <p>My name is Danya and I am a member of the group  of Game Tutorial Alliance. I have some experience in Html and CSS through my studies in Fontys
-                            University of Applied Scince where I have been working on the websites for Pizzeria's. My responsibility inside of the group is to, as everyone,
-                            work together on the tasks where we need everyone to participate, I am also responsible for keeping track of things we are doing and need to do.
+                        <p>
+                            My name is Danya and I am a member of  Game Tutorial Alliance . I have some experience in Html and CSS through my studies in Fontys
+                            University of Applied Science where I have been working on the websites for Pizzeria's. My responsibility  is to, as everyone,
+                            work together with my teammates on the tasks, I am also responsible for keeping track of things we are doing and need to do.
                             I also take responsibilty to organise the group when leader is not present. Inside of the website itself my contribution was to create the sidebar 
                             navigation and to create the genre pages. And, of course, I am responsible to make a tutorial for the game I choose, which is CSGO.
                         </p>
