--- a/public/about.html
+++ b/public/about.html
@@ -31,7 +31,10 @@
                     </article>                
                     <article class="image-item">
                             <img src="images/praise.jpg" alt="praise">
-                            <p>My name is Praise and im a member of the group</p>
+                            <p>
+                                My name is Praise and im a member of Game tutorial alliance . My responsibilities include :
+                                creating the FIFA 23 tutorial page ,the about page , and  adding the feedback we get from teachers and students 
+                            </p>
                             <article class="social-links">
                                 <a href="https://www.twitter.com"><img src="images/twitter.png"></a>
                                 <a href="https://www.instagram.com"><img src="images/instagram.png"></a>
