Changed head to make it consistent on all pages

--- a/public/fighting.html
+++ b/public/fighting.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
+<html lang="en">
+  <!-- Head -->
 <head>
-
-    <!--Here I give title to the page-->
-    <title>GTA tutorial website</title>
-
-    <!--Here I connect this page to the CSS styling page-->
-    <link rel="stylesheet" href="styles/style.css">
-
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles/style.css" type="text/css">
+  <title>GTA - Game Tutorial Alliance</title>
 </head>
 <body>
     <!-- Background with a darkener -->
@@ -59,3 +59,4 @@
         <button type="submit"></button>
     </form>
 </body>
+</html>
