--- a/public/popular.html
+++ b/public/popular.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<head>
-
-    <!--Here I give title to the page-->
-    <title>GTA tutorial website</title>
-
-    <!--Here I connect this page to the CSS styling page-->
-    <link rel="stylesheet" href="styles/style.css">
-
-</head>
+<html lang="en">
+  <!-- Head -->
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/style.css" type="text/css">
+    <title>GTA - Game Tutorial Alliance</title>
+  </head>
 <body>
     <!-- Background with a darkener -->
     <!-- change the class to match your game!! -->
@@ -79,3 +79,4 @@
         </a> <!--http://colegiomuller.com.br/Digital-Prints/oxsse-171011/Overwatch-Poster-Overwatch-Print-Dva.action --Reference to the picture-->
     </main>
 </body>
+</html>
