--- a/public/about.html
+++ b/public/about.html
@@ -27,7 +27,7 @@
                             html and css because i already did a semester in media design in Fontys University of Applied Sciences. My responsibility inside the 
                             group is to work on the tasks and make sure all tasks are finishes on time. Inside the website I helped everyone 
                             with difficulties they had with the css. I also made the design/template for the pages where you choose a tutorial and for 
-                            the actual tutorials itself
+                            the actual tutorials itself. I also made the tutorials for Overwatch 2 and Hollow Knight.
                         </p>
                         <article class="social-links">
                             <a href="https://www.twitter.com"><img src="images/twitter.png"></a>
