--- a/public/about.html
+++ b/public/about.html
@@ -39,6 +39,7 @@
                             <p>
                                 My name is Praise and im a member of Game tutorial alliance . My responsibilities include :
                                 creating the FIFA 23 tutorial page ,the about page , and  adding the feedback we get from teachers and students 
+                                Working on team tasks like  prototypes , personas , conducting interviews , creating our MoSCow and sending out surveys
                             </p>
                             <article class="social-links">
                                 <a href="https://www.twitter.com"><img src="images/twitter.png"></a>
