changes on gta tutorial page
-added more article on all the tutorial pages
- added new collectibles to the tutorial
- added new easter egg to the tutorial
- changes on sitemap

--- a/public/about.html
+++ b/public/about.html
@@ -47,7 +47,7 @@
                     </article>
                     <article class="image-item">
                         <img src="images/ivan.jpeg" alt="ivan">
-                        <p>My name is Ivan and im a member of the group</p>
+                        <p>My name is Ivan Setiawan and I am a member of the group Game Tutorial Alliance. I have a bit of experience in html & css, and currently still learning and improving on my front end developing skill at Fontys University Of Applied Sciences. Through out this journey I help my group in designing and sharing the ideas for the layout of this webiste, I made the all the elements in the index page, sitemap page, and the Grand Theft Auto tutorials page. As a group mate I am responsible in communicating, sharing ideas, working together at Fontys University Of Applied Sciences.</p>
                         <article class="social-links">
                             <a href="https://www.twitter.com"><img src="images/twitter.png"></a>
                             <a href="https://www.instagram.com"><img src="images/instagram.png"></a>
