--- a/public/choosing-tutorial-page-gta-easteregg.html
+++ b/public/choosing-tutorial-page-gta-easteregg.html
@@ -78,7 +78,7 @@
             <h6 class="margin-0">By Ivan Setiawan</h6>
             <!-- Write a summary of the tutorial here!! -->
             <p>
-              
+              The sightings of a ghost on top of a mountain
             </p>
           </div>
         </article>
@@ -96,7 +96,25 @@
             <h6 class="margin-0">By Ivan Setiawan</h6>
             <!-- Write a summary of the tutorial here!! -->
             <p>
-              
+              All the UFO sightings in GTA V
+            </p>
+          </div>
+        </article>
+      </a>
+
+      <a href="tutorial-gta-mtchiliad.html">
+        <article class="flex tutorial ">
+          <!-- Change the image for each tutorial here!! -->
+          <img src="images/tutorial-gta-mtchiliad.png" alt="https://staticg.sportskeeda.com/editor/2022/07/2a9f9-16570215827131-1920.jpg">
+          <div>
+            <!-- Change the name of tutorial here!! -->
+            <h2 class="margin-0">Mystery Of Mt.Chiliad</h2>
+            <hr>
+            <!-- Change you name here!! -->
+            <h6 class="margin-0">By Ivan Setiawan</h6>
+            <!-- Write a summary of the tutorial here!! -->
+            <p>
+              The Mystery of Mt chiliad, connection to jetpack
             </p>
           </div>
         </article>
