--- a/public/choosing-tutorial-page-gta-collectibles.html
+++ b/public/choosing-tutorial-page-gta-collectibles.html
@@ -87,6 +87,24 @@
         </article>
       </a>
 
+      <a href="tutorial-gta-submarineparts.html">
+        <article class="flex tutorial">
+          <!-- Change the image for each tutorial here!! -->
+          <img src="images/tutorial-gta-submarineparts.png" alt="https://oyster.ignimgs.com/mediawiki/apis.ign.com/grand-theft-auto-5/7/7f/GTA_V.HD_SCREENCAPS.PS3.1216.jpg?width=960">
+          <div>
+            <!-- Change the name of tutorial here!! -->
+            <h2 class="margin-0">Submarine Parts</h2>
+            <hr>
+            <!-- Change you name here!! -->
+            <h6 class="margin-0">By Ivan Setiawan</h6>
+            <!-- Write a summary of the tutorial here!! -->
+            <p>
+              A side quest to collect submarine parts
+            </p>
+          </div>
+        </article>
+      </a>
+
       <a href="tutorial-gta-letterscraps.html">
         <article class="flex tutorial">
           <!-- Change the image for each tutorial here!! -->
